# Friends

./: AUTHORS  Makefile  README  README.rst  friends-service.sh  setup.py  test-eds-book-searching.py  test-eds-contact-creation.py  test-eds-create-book.py  test-eds.py
data/: com.canonical.Friends.Connection.service  com.canonical.Friends.Service.service  com.canonical.Friends.URLShorten.service  com.canonical.friends.gschema.xml  model-schema.csv
debian/: changelog  control  copyright  friends-dispatcher.install  friends-facebook.install  friends-flickr.install  friends-foursquare.install  friends-identica.install  friends-instagram.install  friends-linkedin.install  friends-twitter.install  friends.install  rules
debian/tests/: control  unit
docs/: Makefile  conf.py  index.rst
friends/: errors.py  main.py
friends/protocols/: facebook.py  flickr.py  foursquare.py  identica.py  instagram.py  linkedin.py  twitter.py
friends/service/: connection.py  dispatcher.py  mock_service.py  shortener.py
friends/shorteners/: base.py  cligs.py  isgd.py  linkeecom.py  lookup.py  ougd.py  snipurlcom.py  tinyurlcom.py  ur1ca.py  zima.py
friends/testing/: com.canonical.Friends.Connection.service.in  com.canonical.Friends.Service.service.in  com.canonical.Friends.Test.service.in  com.canonical.Friends.URLShorten.service.in  dbus.py  (+4 more)
service/: Makefile.am  autogen.sh  configure.ac
service/data/: Makefile.am  com.canonical.Friends.Server.service.in  com.canonical.Friends.Service.service.in
service/src/: Makefile.am  service.vala
tools/: debug_live.py  debug_slave.py
(+54 files in other folders)
